--- a/index.html
+++ b/index.html
@@ -15482,7 +15482,7 @@ box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
                     <div id="lock-main-time">12:00</div>
                     <div id="lock-main-date">星期一, 1月1日</div>
                 </div>
-                <div id="unlock-hint">向上輕掃以解鎖</div>
+                <div id="unlock-hint">向上滑動解鎖</div>
             </div>
 
             <div id="password-modal-overlay" class="modal">
